--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,13 @@ lerna-debug.log*
 *.tmp
 *.temp
 
+# Node.js
+node_modules/
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Build outputs
+dist/
+build/
+
