--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "performancepulse",
+  "name": "StageX",
   "version": "1.0.0",
-  "description": "공연 추천 블로그 - PerformancePulse",
+  "description": "공연 추천 블로그 - StageX",
   "scripts": {
     "generate": "node scripts/generate-files-list.js",
     "build": "npm run generate",
@@ -14,6 +14,8 @@
     "musical"
   ],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "puppeteer": "^24.27.0"
+  }
 }
-
